<resources>
    <string name="app_name">Budgeting\nApp</string>
    <string name="top_icon">Top Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="new_user_login_now">Already have an account? Login</string>
    <string name="dateformat">dd-MM-yyyy</string>
    <string-array name="items">
        <item>Select Item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>House</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Charity</item>
        <item>Apparel</item>
        <item>Health</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_months_spending">MonthsSpendingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Drawer_open">Drawer Open</string>
    <string name="Drawer_close">Drawer Close</string>
    <string name="date_search">Select a date above to view its entries!!</string>
    <string name="about">Budgeting App!!\n
        The application is made and designed to help users who need a way to manage their finance expenditure and keep a record.\n
        Users set their monthly budget and as they go about their spending, they key in their expenses to keep track of them.\n
        A user has the ability to view or edit any budget items and expense at their convenience.\n
        Likewise, they can set when their monthly budge is meant to reset according to their view.\n
        During the month, users will be able to view their spending against their budget through the given analytical screen.\n
        A User may set a pin to protect their application details from outsiders.\n
        Enjoy!!!</string>
    <string name="create_your_new_account_here">Create Your New Account Here!</string>
</resources>